# hermes

./: LICENSE  main.py  pyproject.toml
hermes/: handlers.py  main.py  media_utils.py  services.py
hermes/resources/notification_icon/: attribution.json
