[project]
name = "hermes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "notify-py>=0.3.43",
    "pillow>=11.2.1",
    "pyperclip>=1.9.0",
    "pytesseract>=0.3.13",
    "typer>=0.16.0",
]

[project.scripts]
hermes = "hermes.main:app"

[build-system]
requires = ["setuptools>=61.0"] # Ferramentas necessárias para construir seu projeto
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["hermes"]
include-package-data = true

[tool.setuptools.package-data]
hermes = ["resources/**/*"]
